# 3d-model-server-test

./: pyproject.toml
scripts/: attach_head.py  attach_head.sh  attach_head_glb.sh
src/hackathon202512/: __init__.py  main.py
