[project]
name = "hackathon202512"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "k10i", email = "kubota.daichi405@mail.kyutech.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn>=0.38.0",
]

[project.scripts]
hackathon202512 = "hackathon202512:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
